Misc Fixes Style fixes for accordions, menu title (when menu collapses), refresh button on jobs page, sizing of refresh button icon on job detail page.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -515,6 +515,12 @@ dd {
     margin-bottom: 10px;
 }
 
+.aw-form-well {
+    border: 1px solid @grey;
+    padding: 9px;
+    border-radius: 4px;
+}
+
 .form-group {
    margin-bottom: 25px;
 }
