--- a/awx/ui/static/less/job-details.less
+++ b/awx/ui/static/less/job-details.less
@@ -83,15 +83,15 @@
     .job_summary {
         .table {
             margin-bottom: 0;
-            border: 1px solid @well-border;
+            border: 1px solid @grey;
             background-color: @white;
         }
         .table>tbody>tr>td {
-            border-top-color: @well-border;
+            border-top-color: @grey;
             padding-bottom: 0;
         }
         .table>thead>tr>th {
-            border-bottom-color: @well-border;
+            border-bottom-color: @grey;
             padding-bottom: 0;
             height: 22px;
         }
@@ -167,7 +167,7 @@
     .job_well {
         padding: 8px;
         background-color: @white;
-        border: 1px solid @well-border;
+        border: 1px solid @grey;
         border-radius: 4px;
         /*-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
                 box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);*/
@@ -281,7 +281,7 @@
         overflow-y: auto;
         background-color: @white;
         .row {
-            border-top: 1px solid @well-border;
+            border-top: 1px solid @grey;
         }
         .row:first-child {
             border: none;
@@ -525,7 +525,7 @@
 
     #pre-formatted-variables {
         border-radius: 4px;
-        border: 1px solid @well-border;
+        border: 1px solid @grey;
         overflow: auto;
         white-space: pre;
         word-break: break-all;
