--- a/awx/ui/static/less/jquery-ui-overrides.less
+++ b/awx/ui/static/less/jquery-ui-overrides.less
@@ -124,15 +124,20 @@ table.ui-datepicker-calendar {
     }
 }
 
-.ui-state-active,
+
 .ui-state-default {
     background-image: none;
     background-color: @white;
-    border: 1px solid @well-border;
+    border: 1px solid @grey;
+}
+
+.ui-state-active {
+    background-image: none;
+    background-color: #f5f5f5;
 }
 
 .ui-widget-content {
-    border: 1px solid @well-border;
+    border: 1px solid @grey;
 }
 
 .ui-spinner a.ui-spinner-button {
